<resources>
    <string name="app_name">WhatsAroundAndroid</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="find_places">Find places!</string>
    <string name="sights">Sights</string>
    <string name="food">Food</string>
    <string name="random">Random</string>
    <string name="historic">Historic</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_search_radius">Search Radius</string>
    <string-array name="pref_search_radius_titles">
        <item>200 m</item>
        <item>500 m</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>20 km</item>
    </string-array>
    <string-array name="pref_search_radius_values">
        <item>200</item>
        <item>500</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
        <item>20000</item>
    </string-array>


    <string name="pref_title_refresh_time">Refresh Time</string>
    <string-array name="pref_refresh_time_titles">
        <item>1 min</item>
        <item>2 mins</item>
        <item>5 mins</item>
        <item>10 mins</item>
        <item>30 mins</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="pref_refresh_time_values">
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">settings</string>
    <string name="monitor_places">Monitor places</string>
</resources>
