<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
            android:key="search_radius"
            android:title="@string/pref_title_search_radius"
            android:entries="@array/pref_search_radius_titles"
            android:entryValues="@array/pref_search_radius_values"
            android:defaultValue="589"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

    <ListPreference
            android:key="refresh_time"
            android:title="@string/pref_title_refresh_time"
            android:entries="@array/pref_refresh_time_titles"
            android:entryValues="@array/pref_refresh_time_values"
            android:defaultValue="120"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>



    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS"/>
    </Preference>

</PreferenceScreen>
